<resources>
    <string name="home_app_name">首页模块</string>
    <string name="home_bt_text_kotlin1">kotlin 基础</string>
    <string name="home_bt_text_kotlin2">kotlin 函数的基本用法</string>
    <string name="home_bt_text_kotlin3">文件操作的 demo</string>
    <string name="home_bt_text_network_base">network的基本用法</string>
    <string name="home_bt_text_network_replace_url">airpods</string>
    <string name="home_bt_text_network_download">网络下载</string>
    <string name="home_bt_text_arcore">ARCore</string>
    <string name="home_title_page1">Home</string>
    <string name="home_juzi">竹竿有甘苦，我爱抱苦节</string>
    <string name="home_navigation_name_1">首页</string>
    <string name="home_navigation_name_2">页面2</string>
    <string name="home_navigation_name_3">页面3</string>
    <string name="home_navigation_name4_">页面4</string>


    <string name="home_portrait_description">头像</string>
    <string name="home_fix_behavior">com.model.home.pages.widget.FixScrollingBehavior</string>
    <string name="home_behavior">com.model.home.pages.widget.AppBarBehavior</string>

</resources>