<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:id="@+id/fragment_parent_1"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:overScrollMode="never"
    android:paddingStart="20dp"
    android:paddingEnd="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/ll_top"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@+id/home_imageview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_title_page1"
                android:textColor="@color/black90"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_juzi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/home_juzi"
                android:textColor="@color/black40"
                android:textSize="12sp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/home_imageview"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/home_portrait_description"
            android:src="@drawable/home_portrait"
            app:layout_constraintBottom_toBottomOf="@+id/ll_top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/ll_top" />

        <View
            android:id="@+id/view_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="-20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="-20dp"
            android:background="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_top" />

        <com.library.widget.banner.BannerView
            android:id="@+id/home_banner"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="10dp"
            app:autoplay="true"
            app:displayTextBackground="#4D000000"
            app:displayTextColor="@color/white"
            app:displayTextGravity="left"
            app:displayTextSize="16sp"
            app:displayTextStyle="bold"
            app:indicatorGravity="bottom|right"
            app:isNumberIndicator="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_line"
            app:loopPlay="true" />

        <Button
            android:id="@+id/errorBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="错误状态"
            app:layout_constraintTop_toBottomOf="@+id/home_banner" />

        <Button
            android:id="@+id/errorRetryBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="错误状态-带重试按钮"
            app:layout_constraintTop_toBottomOf="@+id/errorBtn" />

        <Button
            android:id="@+id/emptyBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="无数据状态"
            app:layout_constraintTop_toBottomOf="@+id/errorRetryBtn" />

        <Button
            android:id="@+id/emptyRetryBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="无数据状态-带重试按钮"
            app:layout_constraintTop_toBottomOf="@+id/emptyBtn" />

        <Button
            android:id="@+id/networkBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="网络错误状态"
            app:layout_constraintTop_toBottomOf="@+id/emptyRetryBtn" />

        <Button
            android:id="@+id/networkRetryBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="网络错误状态-带重试按钮"
            app:layout_constraintTop_toBottomOf="@+id/networkBtn" />

        <Button
            android:id="@+id/loadingBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="加载中状态"
            app:layout_constraintTop_toBottomOf="@+id/networkRetryBtn" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>